Flatpak: Make sure we cancel ongoing transactions on shutdown

Otherwise they may stay dangling, leading to a crash.

BUG: 396730